Random Forest/DNA/MICROSET_PRUEBA/ERROR_OUTPUT/pyrandom_forgraph_output.477980.out
  File "RandomForest_addhist_logimp.py", line 266
    fig.suptitle(f'Histograma {img + 1}', fontsize=30)
                                       ^
SyntaxError: invalid syntax
